# openfold-3

./: LICENSE  README.md  checkpoint_lightning.py  pyproject.toml
.github/workflows/: ci-test-reusable.yml  docker-image.yml  docker.yml  run-test.yml
docker/: DOCKER.md  Dockerfile
docs/: environment.yml
docs/source/: Installation.md  conf.py  configuration_reference.md  data_pipeline_reference.md  index.md  inference.md  input_format_reference.md  parameters_reference.md  precomputed_msa_generation_how_to.md  precomputed_msa_how_to.md  training.md  understanding_dataset_caches.md
docs/source/_static/: custom.css
environments/: production-linux-64.yml
examples/training_yamls/: finetune_1.yml  finetune_2.yml  finetune_3.yml  initial_training.yml
openfold3/: __init__.py  hacks.py  run_openfold.py  setup_openfold.py
openfold3/core/: __init__.py
openfold3/core/config/: config_utils.py  default_linear_init_config.py  msa_pipeline_configs.py
openfold3/core/data/framework/: __init__.py  data_module.py  lightning_utils.py  stochastic_sampler_dataset.py
openfold3/core/data/io/: dataset_cache.py  s3.py  utils.py
openfold3/core/data/resources/: lists.py  patches.py  residues.py  token_atom_constants.py
openfold3/core/data/tools/: colabfold_msa_server.py  hhblits.py  hhsearch.py  hmmbuild.py  hmmsearch.py  jackhmmer.py  kalign.py  parse_msa_files.py  utils.py
openfold3/core/kernels/: cueq_utils.py
openfold3/core/kernels/triton/: fused_softmax.py  swiglu.py  triton_softmax.py
openfold3/core/loss/: confidence.py  diffusion.py  distogram.py  loss_module.py  loss_utils.py
openfold3/core/metrics/: __init__.py  aggregate_confidence_ranking.py  confidence.py  model_selection.py  quality.py  rasa.py  sample_ranking.py  validation_all_atom.py
openfold3/core/model/feature_embedders/: input_embedders.py  template_embedders.py
openfold3/core/model/heads/: head_modules.py  prediction_heads.py
openfold3/core/model/latent/: base_blocks.py  base_stacks.py  evoformer.py  msa_module.py  pairformer.py  template_module.py
openfold3/core/runners/: model_runner.py  writer.py
openfold3/core/utils/: all_atom_multimer.py  atom_attention_block_utils.py  atomize_utils.py  callbacks.py  checkpoint_loading_utils.py  checkpointing.py  chunk_utils.py  exponential_moving_average.py  grad_manager.py  logging_utils.py  lr_schedulers.py  permutation_alignment.py  precision_utils.py  relpos.py  rigid_utils.py  s3.py  script_utils.py  superimposition.py  tensor_utils.py  timing.py
openfold3/entry_points/: experiment_runner.py  import_utils.py  parameters.py  validator.py
openfold3/projects/of3_all_atom/: constants.py  model.py  project_entry.py  runner.py
openfold3/tests/: Dockerfile  __init__.py  compare_utils.py  config.py  conftest.py  custom_assert_utils.py  data_utils.py  test_atomize_utils.py  test_chain_pair_mask.py  test_colabfold_msa.py  test_confidence_loss.py  test_confidence_metrics.py  test_dataset_config.py  test_dataset_utils.py  test_diffusion_conditioning.py  test_diffusion_loss.py  test_diffusion_module.py  test_diffusion_transformer.py  test_distogram_loss.py  test_embedders.py  test_entry_points.py  test_evoformer.py  test_heads.py  test_inference_full.py  test_kernels.py  test_lmdb.py  test_model_checkpoint.py  test_model_runner.py  test_msa.py  test_msa_module.py  test_of3_model.py  test_outer_product_mean.py  test_pair_transition.py  test_pairformer.py  test_permutation_alignment.py  test_primitives.py  test_sequence_local_atom_attention.py  test_setup_openfold.py  test_structure_from_query.py  test_template.py  (+7 more)
scripts/data_preprocessing/: create_RNA-monomer_training_dataset_cache.py  create_pdb-weighted_training_dataset_cache.py  preprocess_pdb_disordered_of3_compare_structures.py  preprocess_pdb_disordered_of3_count_unresolved.py  preprocess_pdb_of3.py  preprocess_rfam.py  preprocess_template_alignments_old_of3.py
scripts/dev/: convert_ckpt_to_ema_only.py  update_ccd.py
scripts/utils/: generate_representatives_from_msa_directory.py
(+110 files in other folders)
